--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^13.11.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
     "typescript": "^3.8.3"
   }
 }
